# railway-signals

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  Makefile  Pfeiler.FCStd  README.md  Spreadsheet_Master.FCStd  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: index.md
freecad/: Makefile
freecad/KS/: Makefile
freecad/watti-signal-mount/: Makefile  README.md  watti-assembly.FCStd  watti-assembly.step  watti-assembly.stl  watti-plate.3mf  watti-plate.FCStd  watti-plate.stl  watti-w-latch-assembly.3mf  watti-w-latch-assembly.FCStd  watti-w-latch-assembly.step  watti-w-latch-assembly.stl
kicad/: .gitignore  .markdownlint.yaml  panel.json
kicad/Hauptsignal/: Hauptsignal.kicad_pcb  Hauptsignal.kicad_pro  Hauptsignal.kicad_sch  README.md  panel.json
kicad/Hauptsignal-Mehrfarbenoptik/: Hauptsignal-Mehrfarbenoptik.kicad_pcb  Hauptsignal-Mehrfarbenoptik.kicad_pro  Hauptsignal-Mehrfarbenoptik.kicad_sch  README.md  fp-lib-table
kicad/Library.pretty/: LRTBR48GP9Q71R7S526NP68.kicad_mod
kicad/Mehrabschnittssignal/: Mehrabschnittssignal.kicad_pcb  Mehrabschnittssignal.kicad_pro  Mehrabschnittssignal.kicad_sch  README.md  panel.json
kicad/Vorsignal/: README.md  Vorsignal.kicad_pcb  Vorsignal.kicad_pro  Vorsignal.kicad_sch  panel.json
kicad/Zusatzsignal/: README.md  Zusatzsignal.kicad_pcb  Zusatzsignal.kicad_pro  Zusatzsignal.kicad_sch  panel.json
kicad/extra/: Makefile  README.md
kicad/hauptsignal/: README.md  signalschirm.kicad_pcb  signalschirm.kicad_sch
kicad/zusatzsignal-2-led/: README.md  panel.kicad_pcb  panel2.kicad_pcb  (+3 more)
(+362 files in other folders)
