[project]
name = "railway-signals"
version = "1.0.0"
authors = [{ name = "Jan Graichen", email = "jgraichen@altimos.de" }]
dependencies = []
requires-python = "~=3.14.0"
readme = "README.md"

[project.optional-dependencies]
docs = [
    "mkdocs-awesome-nav~=3.3.0",
    "mkdocs-git-revision-date-plugin~=0.3.2",
    "mkdocs-material~=9.7.0",
]
